Added touch features

--- a/index.html
+++ b/index.html
@@ -130,7 +130,12 @@ Iridium-1 Hosted Webcast                 was recorded by SpaceX official YouTube
     <div class="horizontal glow">
       <div class="vertical">
         <img src="images/SpaceX_logo.svg" class="logo">
-        <div class="disclaimer">This website is not in any way associated with SpaceX. SpaceX, and SpaceX logo are owned by Space Exploration Technologies Inc. Webcast Music are owned by the respective parties.</div>
+        <div class="disclaimer">
+		This website is not in any way associated with SpaceX. SpaceX, and SpaceX logo are owned by Space Exploration Technologies Inc. Webcast Music are owned by the respective parties.
+		<br>
+		<br>
+		Use Left or right arrow key to change track. Space to pause.
+		</div>
       </div>
 	  <div id="track-info">
 		<div>Artist: <span id="artist">Unknown</span></div>
