Auto focus logo

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Iridium-1 Hosted Webcast                 was recorded by SpaceX official YouTube
   <div id="content">
     <div class="horizontal glow">
       <div class="vertical">
-        <img src="images/SpaceX_logo.svg" class="logo">
+        <img src="images/SpaceX_logo.svg" class="logo" id="logo">
         <div class="disclaimer">
 		This website is not in any way associated with SpaceX. SpaceX, and SpaceX logo are owned by Space Exploration Technologies Inc. Webcast Music are owned by the respective parties.
 		<br>
@@ -145,7 +145,7 @@ Iridium-1 Hosted Webcast                 was recorded by SpaceX official YouTube
   </div>
   <div id="media">
     <iframe id="youtube-iframe" width="100" height="100" src="//www.youtube.com/embed/Q7EL1nTnOI8?autoplay=1" frameborder="0"></iframe>
-    <div class="text">Press SpaceX Logo to hide after playing</div>
+    <!--div class="text">Press SpaceX Logo to hide after playing</div-->
   </div>
   <script src="js/youtube.js"></script>
   </body>
