Added information about touch device

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Iridium-1 Hosted Webcast                 was recorded by SpaceX official YouTube
 		This website is not in any way associated with SpaceX. SpaceX, and SpaceX logo are owned by Space Exploration Technologies Inc. Webcast Music are owned by the respective parties.
 		<br>
 		<br>
-		Use Left or right arrow key to change track. Space to pause.
+		Use Left or right arrow keys/swipe to change track. Space/Tap to pause.
 		</div>
       </div>
 	  <div id="track-info">
