--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@ SpaceX IRIDIUM 1 Mission Launch - 14/01/2017 was recorded by Gadgetroid         
 CRS-10 Technical Webcast   was recorded by SpaceX official YouTube channel                               Avaliable at: https://www.youtube.com/watch?v=qPVRRtNxw5Q
     LC-39A                                                                                               Avaliable at: https://soundcloud.com/testshotstarfish/lc-39a
 	Andromeda                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/andromeda
+
+SpaceX Webcast Music SES-10 30.03.2017 was recorded by Вадим Фоменко                                     Avaliable at: https://www.youtube.com/watch?v=fbvJEghT4Ks
+    Re-Flight                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/re-flight
+	Resonator                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/resonator
+
+
 -->
 <html>
   <head>
