Added new music from CRS-11

--- a/index.html
+++ b/index.html
@@ -115,9 +115,13 @@ NROL-76 was recorded by Geospatial Media                                        
     Re-Flight                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/re-flight
 	Resonator                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/resonator
 
-SpaceX Webcast Music Inmarsat-5 15.05.2017                                                               Avaliable at: https://www.youtube.com/watch?v=TIu2VK_4Y0o
+SpaceX Webcast Music Inmarsat-5 15.05.2017 was recorded by Вадим Фоменко                                 Avaliable at: https://www.youtube.com/watch?v=TIu2VK_4Y0o
     LC-39A                                                                                               Avaliable at: https://soundcloud.com/testshotstarfish/lc-39a
 	Andromeda                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/andromeda
+
+CRS-11 Hosted Webcast was recorded by SpaceX official YouTube channel                                    Avaliable at: https://www.youtube.com/watch?v=URh-oPqjlM8
+    In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
+	Resonator                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/resonator
 -->
 <html>
   <head>
