Adding CRS-12 music

--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@ SpaceX Webcast Music Inmarsat-5 15.05.2017 was recorded by Вадим Фомен
 CRS-11 Hosted Webcast was recorded by SpaceX official YouTube channel                                    Avaliable at: https://www.youtube.com/watch?v=URh-oPqjlM8
     In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
     Resonator                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/resonator
+
+SpaceX Webcast Music CRS-12 14.08.2017 was recorded by Вадим Фоменко                                     Avaliable at: https://www.youtube.com/watch?v=xQAtuwteb5k
+    Approaching Dragon                                                                                   Avaliable at: https://soundcloud.com/testshotstarfish/approaching-dragon
+    Andromeda                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/andromeda
+	
+
 -->
 <html>
   <head>
