Add Iridium-3, Echostar 105, Koreasat-5A, CRS-13, Iridium 4, and ZUMA Mission details

--- a/index.html
+++ b/index.html
@@ -127,13 +127,30 @@ SpaceX Webcast Music CRS-12 14.08.2017 was recorded by Вадим Фоменко
     Approaching Dragon                                                                                   Avaliable at: https://soundcloud.com/testshotstarfish/approaching-dragon
     Andromeda                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/andromeda
 
-Iridium-3 Mission by SpaceX official YouTube channel                                                     Avaliable at: https://www.youtube.com/watch?v=SB4N4xF2B2w
+SpaceX Webcast Music Iridium-3 09.10.2017 was recorded by Вадим Фоменко                                  Avaliable at: https://www.youtube.com/watch?v=0p7GLZec4yc
     Sputnik                                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/sputnik
     In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
 
-Falcon 9: SES-11   by SpaceX official YouTube channel                                                    Avaliable at: https://www.youtube.com/watch?v=AHyu_BbC3D8
+SpaceX Webcast Music Echostar 105 / SES-15 11.10.2017 was recorded by Вадим Фоменко                      Avaliable at: https://www.youtube.com/watch?v=UPGfEIQwGTE
     Sputnik                                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/sputnik
     In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
+
+SpaceX Webcast Music Koreasat-5A 30.10.2017 was recorded by Вадим Фоменко                                Avaliable at: https://www.youtube.com/watch?v=xy70xnHz_UE
+    Sputnik                                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/sputnik
+    In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
+
+SpaceX Technical Webcast Music CRS-13 15.12.2017 was recorded by Вадим Фоменко                           Avaliable at: https://www.youtube.com/watch?v=xCEC58LxQIU
+    Flight-Proven                                                                                        Avaliable at: https://soundcloud.com/testshotstarfish/flight-proven
+    Resonator                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/resonator
+
+Iridium 4
+    Flight-Proven                                                                                        Avaliable at: https://soundcloud.com/testshotstarfish/flight-proven
+    Resonator                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/resonator
+
+ZUMA Mission
+    Flight-Proven                                                                                        Avaliable at: https://soundcloud.com/testshotstarfish/flight-proven
+    Resonator                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/resonator
+
 -->
 <html>
   <head>
