Added Falcon Heavy music as well as notes for later launches

--- a/index.html
+++ b/index.html
@@ -151,6 +151,18 @@ ZUMA Mission
     Flight-Proven                                                                                        Avaliable at: https://soundcloud.com/testshotstarfish/flight-proven
     Resonator                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/resonator
 
+SpaceX Webcast Music Falcon Heavy Test Flight 06.02.2018 was recorded by Вадим Фоменко                   Avaliable at: https://www.youtube.com/watch?v=yw1otjGAk1s
+    Rollout                                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/rollout
+    Heavy                                                                                                Avaliable at: https://soundcloud.com/testshotstarfish/heavy
+    Unknown intro                                                                                        Avaliable at: https://www.youtube.com/watch?v=yw1otjGAk1s?t=7m53s
+
+Paz / Starlink prototype satellites
+    Flight-Proven                                                                                        Avaliable at: https://soundcloud.com/testshotstarfish/flight-proven
+
+Hispasat 30W-6
+    Flight-Proven                                                                                        Avaliable at: https://soundcloud.com/testshotstarfish/flight-proven
+    Resonator                                                                                            Avaliable at: https://soundcloud.com/testshotstarfish/resonator
+
 -->
 <html>
   <head>
