Added SSO-A and CRS-16

--- a/index.html
+++ b/index.html
@@ -209,6 +209,12 @@ SAOCOM 1A                                                                       
 Es’hail 2                                                                                                Avaliable at: https://www.youtube.com/watch?v=PhTbzc-BqKs
     In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
     Rollout                                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/rollout
+
+SSO-A                                                                                                    Avaliable at: https://www.youtube.com/watch?v=Wq8kS6UoOrQ
+    In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
+
+Dragon Resupply Mission (CRS-16)                                                                         Avaliable at: https://www.youtube.com/watch?v=Esh1jHT9oTA
+    In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
 -->
 <html>
   <head>
