Added 3 more missions

--- a/index.html
+++ b/index.html
@@ -215,6 +215,16 @@ SSO-A                                                                           
 
 Dragon Resupply Mission (CRS-16)                                                                         Avaliable at: https://www.youtube.com/watch?v=Esh1jHT9oTA
     In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
+
+Spaceflight SSO-A: SmallSat Express                                                                      Avaliable at: https://www.youtube.com/watch?v=Wq8kS6UoOrQ
+    In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
+
+GPS III SV01 Mission                                                                                     Avaliable at: https://www.youtube.com/watch?v=UMtpVS0xM1c
+    In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
+
+Iridium-8 Mission                                                                                        Avaliable at: https://www.youtube.com/watch?v=VshdafZvwrg
+    In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
+
 -->
 <html>
   <head>
