Added previous launches and STP-2 Animation

--- a/index.html
+++ b/index.html
@@ -225,6 +225,26 @@ GPS III SV01 Mission                                                            
 Iridium-8 Mission                                                                                        Avaliable at: https://www.youtube.com/watch?v=VshdafZvwrg
     In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
 
+Nusantara Satu Mission                                                                                   Avaliable at: https://www.youtube.com/watch?v=XS0E35aYJcU
+    In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
+
+Crew Demo-1 Mission | Launch                                                                             Avaliable at: https://www.youtube.com/watch?v=2ZL0tbOZYhE
+	No intro music
+
+Arabsat-6A Mission                                                                                       Avaliable at: https://www.youtube.com/watch?v=TXMGu2d8c8g
+    In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
+
+CRS-17 Mission                                                                                           Avaliable at: https://www.youtube.com/watch?v=AQFhX5TvP0M
+    In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
+
+Starlink Mission                                                                                         Avaliable at: https://www.youtube.com/watch?v=riBaVeDTEWI
+    In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
+
+RADARSAT Constellation Mission                                                                           Avaliable at: https://www.youtube.com/watch?v=8A2nJd9Urk8
+    In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
+
+STP-2 Mission                                                                                            Avaliable at: https://www.youtube.com/watch?v=WxH4CAlhtiQ
+    In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants
 -->
 <html>
   <head>
