--- a/index.html
+++ b/index.html
@@ -257,6 +257,29 @@ AMOS-17 Mission                                                                 
 
 Starlink Mission                                                                                         Avaliable at: https://www.youtube.com/watch?v=pIDuv0Ta0XQ
     Cities in Flight                                                                                     Avaliable at: https://www.youtube.com/watch?v=fZh82-WcCuo
+
+CRS-19 Mission                                                                                           Avaliable at: https://www.youtube.com/watch?v=-aoAGdYXp_4
+    Cities in Flight                                                                                     Avaliable at: https://www.youtube.com/watch?v=fZh82-WcCuo
+
+Starlink Mission                                                                                         Avaliable at: https://www.youtube.com/watch?v=HwyXo6T7jC4
+    Cities in Flight                                                                                     Avaliable at: https://www.youtube.com/watch?v=fZh82-WcCuo
+    Rollout                                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/rollout-z-master-17jun2018
+
+Crew Dragon Launch Escape Demonstration                                                                  Avaliable at: https://www.youtube.com/watch?v=mhrkdHshb3E
+    Cities in Flight                                                                                     Avaliable at: https://www.youtube.com/watch?v=fZh82-WcCuo
+
+Starlink Mission                                                                                         Avaliable at: https://www.youtube.com/watch?v=1KmBDCiL7MU
+    In the Shadow of Giants                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/in-the-shadow-of-giants-z
+
+CRS-20 Mission                                                                                           Avaliable at: https://www.youtube.com/watch?v=1MkcWK2PnsU
+    Cities in Flight                                                                                     Avaliable at: https://www.youtube.com/watch?v=fZh82-WcCuo
+
+Starlink Mission                                                                                         Avaliable at: https://www.youtube.com/watch?v=JVuS4IS2Kvs https://www.youtube.com/watch?v=I4sMhHbHYXM
+    Cities in Flight                                                                                     Avaliable at: https://www.youtube.com/watch?v=fZh82-WcCuo
+
+Starlink Mission                                                                                         Avaliable at: https://www.youtube.com/watch?v=wSge0I7pwFI
+    Cities in Flight                                                                                     Avaliable at: https://www.youtube.com/watch?v=fZh82-WcCuo
+
 -->
 <html>
   <head>
