Added latest starlink mission music

--- a/index.html
+++ b/index.html
@@ -282,7 +282,10 @@ Starlink Mission                                                                
     Cities in Flight                                                                                     Avaliable at: https://www.youtube.com/watch?v=fZh82-WcCuo
 
 Starlink Mission                                                                                         Avaliable at: https://www.youtube.com/watch?v=y4xBFHjkUvw
-    Crew. Avaliable in july (https://twitter.com/TSStarfish/status/1268416166659125249)                  Recorded by julio Deocares: https://www.youtube.com/watch?v=ggc8NS_SfwE
+    Crew. Avaliable in july https://twitter.com/TSStarfish/status/1268416166659125249                    Avaliable at: https://www.youtube.com/watch?v=y4xBFHjkUvw
+
+Starlink Mission                                                                                         Avaliable at: https://www.youtube.com/watch?v=8riKQXChPGg
+    New Gravity                                                                                          Avaliable at: https://www.youtube.com/watch?v=8riKQXChPGg
 
 -->
 <html>
