Added GPS III and ANASIS-II

--- a/index.html
+++ b/index.html
@@ -266,7 +266,6 @@ Starlink Mission                                                                
     Rollout                                                                                              Avaliable at: https://soundcloud.com/testshotstarfish/rollout-z-master-17jun2018
 
 Crew Dragon Launch Escape Demonstration                                                                  Avaliable at: https://www.youtube.com/watch?v=mhrkdHshb3E
-    Cities in Flight                                                                                     Avaliable at: https://www.youtube.com/watch?v=fZh82-WcCuo
 	One off track by Test shot starfish https://twitter.com/TSStarfish/status/1268417482051604481
 
 Starlink Mission                                                                                         Avaliable at: https://www.youtube.com/watch?v=1KmBDCiL7MU
@@ -285,7 +284,13 @@ Starlink Mission                                                                
     Crew. Avaliable in july https://twitter.com/TSStarfish/status/1268416166659125249                    Avaliable at: https://www.youtube.com/watch?v=y4xBFHjkUvw
 
 Starlink Mission                                                                                         Avaliable at: https://www.youtube.com/watch?v=8riKQXChPGg
-    New Gravity                                                                                          Avaliable at: https://www.youtube.com/watch?v=8riKQXChPGg
+    New Gravity                                                                                          Avaliable at: https://open.spotify.com/album/5RylrDV6HqDEtGomtw4QPM
+
+GPS III Space Vehicle 03 Mission                                                                         Avaliable at: https://www.youtube.com/watch?v=6zr0nfG3Xy4
+    Unknown
+
+ANASIS-II Mission                                                                                        Avaliable at: https://www.youtube.com/watch?v=TshvZlQ7le8
+    Crew
 
 -->
 <html>
